@@ -18,6 +18,7 @@
     * Improve FW error message support
     * Work around print head returning to the print after Stop print
     * Added endpoint for download file from url
+    * Password in plain text form is not stored in memory
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
